set(T "linear")
add_library(${T} linear.cpp)
target_link_libraries(${T} use_mpi)
target_compile_definitions(${T} PUBLIC _USE_HYPRE_=$<BOOL:${USE_HYPRE}>)
target_compile_definitions(${T} PUBLIC _USE_AMGX_=$<BOOL:${USE_AMGX}>)

if (USE_HYPRE)
  set(T "hypre")
  add_library(${T} hypre.cpp)
  target_link_libraries(${T} hypreext use_mpi)

  set(T "hypresub")
  add_library(${T} hypresub.cpp)
  target_link_libraries(${T} hypre subcomm histogram)

  set(T "linear_hypre")
  add_library(${T} linear_hypre.cpp)
  target_link_libraries(${T} hypre)
endif()

if (USE_AMGX)
  set(T "linear_amgx")
  add_library(${T} linear_amgx.cpp)
  target_include_directories(${T} PRIVATE ${APHROS_PREFIX}/include)
  target_link_libraries(${T} amgxsh use_mpi)
  if (CUDAToolkit_FOUND)
    target_link_libraries(${T} CUDA::cudart_static)
  endif()
endif()
